💄 Lint style.css, add transparent input

--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -19,9 +19,18 @@ code {
   transform: translate(-50%, -50%);
 }
 
-html, body {
+html,
+body {
   height: 100%;
   width: 100%;
-  background: rgb(219,186,17);
-  background: linear-gradient(38deg, rgba(219,186,17,1) 0%, rgba(218,17,119,1) 100%);
+  background: rgb(219, 186, 17);
+  background: linear-gradient(
+    38deg,
+    rgba(219, 186, 17, 1) 0%,
+    rgba(218, 17, 119, 1) 100%
+  );
+}
+
+input {
+  background-color: rgba(0, 0, 0, 0);
 }
