--- a/src/style.css
+++ b/src/style.css
@@ -33,4 +33,16 @@ body {
 
 input {
   background-color: rgba(0, 0, 0, 0);
+  border-radius:100px;
+  height: 50px;
+  width: 500px;
+  font-size: 45px;
+  color: white;
+  border-color: white;
+  border-style: solid;
+  padding-inline: 20px;
+}
+
+input:focus {
+  outline: none;
 }
