--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -46,13 +46,7 @@ input:focus {
   outline: none;
 }
 
-button.submit {
-  border-radius: 15px;
-  border-style: solid;
-  border-color: white;
-  margin-top: 50px;
-  height: 50px;
-  width: 150px;
-  font-weight: bold;
-  font-size: 20px;
+.submit {
+  margin-top: 30px;
+  height: 150px;
 }
